--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
             "@types/react": "^19.2.2",
             "@types/react-dom": "^19.2.2",
             "@vitejs/plugin-react-swc": "^3.10.2",
+            "ts-node": "^10.9.2",
+            "typescript": "^5.9.3",
             "vite": "6.3.5"
       },
       "scripts": {
